# order

./: .env.example  .gitignore  GEMINI.md  README.md  pyproject.toml  railway.toml
docs/: architecture.md  manifesto.md  roadmap.md
frontend/: package.json  postcss.config.js  tailwind.config.ts  vercel.json
frontend/.next/: BUILD_ID  build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  required-server-files.js  required-server-files.json  trace  trace-build
frontend/.next/cache/: .previewinfo  .rscinfo
frontend/.next/diagnostics/: route-bundle-stats.json
frontend/.next/server/: middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json
frontend/.next/server/app/: _global-error.rsc  _not-found.html  index.html  page_client-reference-manifest.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ConversationView.tsx  ExecutorView.tsx  GatherView.tsx  JustInTimeView.tsx  ModeSelector.tsx  OneThingView.tsx  ReduceView.tsx
frontend/lib/: api.ts
src/order/: __init__.py  __main__.py  api.py
src/order/core/: __init__.py  config.py  models.py  store.py
src/order/cron/: __init__.py  jobs.py  scheduler.py
src/order/gatherers/: __init__.py  base.py  discord.py  github.py  gmail.py  x_twitter.py
src/order/modes/: __init__.py  conversation.py  executor.py  gather.py  just_in_time.py  one_thing.py  reduce.py
src/order/synthesis/: __init__.py  llm.py
tests/: conftest.py  test_api_modes.py  test_store.py
~/.order/: order.db
~/.order/cron/: state.json
(+21 files in other folders)
